# na-ruchky

./: .dockerignore  .gitignore  Dockerfile  docker-compose-local.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
ruchky_backend/: api.py  asgi.py  settings.py  urls.py  wsgi.py
ruchky_backend/auth/: api.py  apps.py  schemas.py
ruchky_backend/helpers/: context_processors.py  types.py
ruchky_backend/helpers/api/: schemas.py
ruchky_backend/helpers/db/: models.py  validators.py
ruchky_backend/helpers/logger/: __init__.py
ruchky_backend/helpers/storage/: __init__.py
ruchky_backend/locale/uk/LC_MESSAGES/: django.po
ruchky_backend/pets/: admin.py  api.py  apps.py  models.py  schemas.py
ruchky_backend/pets/management/commands/: seed_breeds.py
ruchky_backend/pets/migrations/: 0001_initial.py  0002_remove_pet_age_pet_birth_date_pet_profile_picture_and_more.py  0003_pet_short_description_petsociallink_uuidtaggeditem_and_more.py  0004_petimage_alter_pet_profile_picture.py  0005_breed_alter_pet_breed.py  0006_breed_image_hover.py  0007_pet_is_hypoallergenic.py
ruchky_backend/settings/: base.py  local.py  production.py
ruchky_backend/templates/account/email/: base_message.txt  email_confirmation_message.txt
ruchky_backend/users/: admin.py  api.py  apps.py  forms.py  managers.py  models.py  schemas.py
ruchky_backend/users/migrations/: 0001_initial.py  0002_organizationprofile_user_organization.py
