[project]
name = "ruchky-backend"
version = "0.1.0"
description = "Na Ruchky DRF backend and Admin panel"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "django>=5.1.4",
    "django-allauth>=65.3.1",
    "django-cors-headers>=4.6.0",
    "django-debug-toolbar>=5.0.1",
    "django-ninja>=1.3.0",
    "django-storages[google]>=1.14.4",
    "google-cloud-storage>=2.19.0",
    "pillow>=11.1.0",
    "psycopg[binary,pool]>=3.2.3",
    "python-dotenv>=1.0.1",
    "whitenoise>=6.8.2",
]

[dependency-groups]
dev = [
    "django-extensions>=3.2.3",
]
