[project]
name = "ruchky-backend"
version = "0.1.0"
description = "Na Ruchky Django Ninja backend and Django Admin panel"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "aiohttp>=3.12.14",
    "django>=5.2.4",
    "django-allauth[socialaccount]==65.3.1",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.7.0",
    "django-debug-toolbar>=5.2.0",
    "django-ninja>=1.4.3",
    "django-storages[google]>=1.4.1",
    "django-taggit>=6.1.0",
    "email-validator>=2.2.0",
    "google-cloud-storage>=2.19.0",
    "gunicorn>=23.0.0",
    "phonenumbers>=9.0.10",
    "pillow>=11.3.0",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-extra-types>=2.10.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.35.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-extensions>=3.2.3",
]
